Add XStream attributed character iterator converter coverage