@@ -19,6 +19,7 @@ tasks.withType(Test).configureEach {
     jvmArgs += [
         "--add-opens=java.base/java.io=ALL-UNNAMED",
         "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.text=ALL-UNNAMED",
         "--add-opens=java.base/java.util=ALL-UNNAMED"
     ]
 }
@@ -37,6 +38,7 @@ graalvmNative {
             buildArgs.addAll([
                 '--add-opens=java.base/java.io=ALL-UNNAMED',
                 '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+                '--add-opens=java.base/java.text=ALL-UNNAMED',
                 '--add-opens=java.base/java.util=ALL-UNNAMED',
                 '--initialize-at-run-time=com.thoughtworks.xstream.core.JVM'
             ])
